# todoRust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
configs/: grcov.yml
src/: main.rs
tests/: cli.rs
