[package]
name = "todo"
version = "0.1.0"
authors = ["kingavatar <saikiranreddy06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
assert_cmd = "1.0.1"
filebuffer = "0.4.0"
shellexpand = "2.0.0"
colored = "2.0.0"